--- a/web/myApp/templates/edit_cfg.html
+++ b/web/myApp/templates/edit_cfg.html
@@ -7,7 +7,8 @@
     <h1>Edit "{{ configs.custID }}"</h1>
     <form role="form" action="" method="post">
        {% csrf_token %}
-       {{ form.as_p }}
+       {{ form.as_ul }}
+		<br> <br>
        <button type="submit">Submit</button>
     </form>
 {% endblock content %}
