--- a/web/myApp/templates/edit_cfg.html
+++ b/web/myApp/templates/edit_cfg.html
@@ -4,11 +4,41 @@
 {% endblock title %}
 
 {% block content %}
-    <h1>Edit "{{ configs.custID }}"</h1>
+<!--
     <form role="form" action="" method="post">
        {% csrf_token %}
        {{ form.as_ul }}
-		<br> <br>
        <button type="submit">Submit</button>
     </form>
+-->
+
+<div class="container">
+  <h2>Configuration Data for {{configs.custID}}</h2>
+  <p>The params are arranged in specific sections:</p>            
+  <form role="form" action="" method="post">
+   {% csrf_token %}
+  <table class="table table-hover">
+    <thead> <tr> <th>General</th> <th></th> </tr> </thead>
+    <tbody>
+		<tr> <td>ServerIP</td>
+		<td><input id="serverIP" type="text" name="serverIP" value="127.0.0.1" maxlength="20"/> </tr>
+    </tbody>
+    <thead> <tr> <th>SSL</th> <th></th> </tr> </thead>
+    <tbody>
+      <tr> <td>SSL Port</td> 
+		<td><input id="sslPort" type="number" name="sslPort" value={{configs.sslPort}} /></tr>
+    </tbody>
+    <thead> <tr> <th>BGP</th> <th></th> </tr> </thead>
+    <tbody>
+      <tr> <td>Version</td> 
+		<td><input id="version" type="number" name="version" value="4"/> </tr>
+      <tr> <td>My AS</td> 
+		<td><input id="myas" type="number" name="myas" value="100"/> </tr>
+    </tbody>
+  </table>
+  <button type="submit">Submit</button>
+  </form>
+</div>
+
+
 {% endblock content %}
