ssl_perf works now

--- a/web/myApp/templates/cfg_detail.html
+++ b/web/myApp/templates/cfg_detail.html
@@ -8,10 +8,13 @@
     <h1>Protocol Configuration Details</h1>
     <!-- here’s the variable we are passing in -->
 	<p> 
-		Customer: ID:{{ configs.custID }}, Server:{{ configs.serverIP }},
-		Protocol: {{ configs.protocol }}
+		Customer: ID:{{ configs.custID }}, Server:{{ configs.serverIP }}
 		<a class="btn btn-success" href="{% url 'edit_cfg' slug=configs.slug %}">Edit</a>
-		<a class="btn btn-primary" href="{% url 'run_cfg' slug=configs.slug %}">Run</a>
+		<h3>Run Tests:</h3>
+		<a class="btn btn-primary" href="{% url 'run_cfg' slug=configs.slug proto="bgp"%}">BGP</a>
+		<a class="btn btn-primary" href="{% url 'run_cfg' slug=configs.slug proto="ssl"%}">SSL</a>
+		<a class="btn btn-primary" href="{% url 'run_cfg' slug=configs.slug proto="ssl_perf"%}">SSL_PERF</a>
+		<a class="btn btn-primary" href="{% url 'run_cfg' slug=configs.slug proto="http_perf"%}">HTTP_PERF</a>
 	</p>
 		{% if running == True %}
 			Running....
