Added openvpn screen protocol param

--- a/web/myApp/templates/edit_cfg.html
+++ b/web/myApp/templates/edit_cfg.html
@@ -42,8 +42,8 @@
 	{% elif proto == "openvpn" %}
     <thead> <tr> <th>OpenVPN</th> <th></th> </tr> </thead>
     <tbody>
-      <tr> <td>xxxx</td> 
-		<td><input id="xxxx" type="number" name="xxxx" value={{configs.sslPort}} /></tr>
+      <tr> <td>Protocol</td> 
+		<td><input id="ovProto" type="text" name="ovProto" value={{configs.ovProto}} /></tr>
     </tbody>
 	{% endif %}
   </table>
