--- a/web/myApp/templates/cfg_detail.html
+++ b/web/myApp/templates/cfg_detail.html
@@ -14,10 +14,13 @@
 	{% else %}
 		<p>Status: Stopped <span class="glyphicon glyphicon-remove"></span></p> 
 	{% endif %}
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		&nbsp;&nbsp;
 	<center>
 		<h4>Edit Configuration</h4>
 		<a href="{% url 'edit_cfg' slug=configs.slug proto="bgp"%}" class="btn btn-success btn-md"><span class="glyphicon glyphicon-edit"></span>BGP</a>
+		<a href="{% url 'edit_cfg' slug=configs.slug proto="ssl"%}" class="btn btn-success btn-md"><span class="glyphicon glyphicon-edit"></span>SSL</a>
+		<a href="{% url 'edit_cfg' slug=configs.slug proto="ssl_perf"%}" class="btn btn-success btn-md"><span class="glyphicon glyphicon-edit"></span>SSL_PERF</a>
+		<a href="{% url 'edit_cfg' slug=configs.slug proto="http_perf"%}" class="btn btn-success btn-md"><span class="glyphicon glyphicon-edit"></span>HTTP_PERF</a>
 		<a href="{% url 'edit_cfg' slug=configs.slug proto="openvpn"%}" class="btn btn-success btn-md"><span class="glyphicon glyphicon-edit"></span>OPENVPN</a>
 		<br> <br>
 		<h4>Run Tests</h4>
@@ -31,6 +34,7 @@
 	<br> <center>
 	<h4>Test Status</h4>
 		<a href="{% url 'edit_cfg' slug=configs.slug proto="bgp"%}" class="btn btn-success btn-md"><span class="glyphicon glyphicon-edit"></span>BGP</a>
+		<a href="{% url 'edit_cfg' slug=configs.slug proto="ssl"%}" class="btn btn-success btn-md"><span class="glyphicon glyphicon-edit"></span>SSL</a>
 	</center>
 {% endblock content %}
 
