--- a/web/myApp/templates/index.html
+++ b/web/myApp/templates/index.html
@@ -16,8 +16,10 @@
 -->
 		{% for config in configs  %}
 			<a href ="{% url 'cfg_detail' slug=config.slug %}">Customer:{{config.custID}}</a>
-			Customer: ID:{{ config.custID }}, Server:{{ config.serverIP }},
+			Customer: ID:{{ config.custID }}, Server:{{ config.serverIP }}
+<!--
 			Protocol: {{ config.protocol }}, Port: {{ config.port }}
+-->
 			<p></p>
 		{% endfor %}
 	</p>
